@@ -1,84 +1,0 @@
-WinMerge 2.7.6 Beta Release Notes
-=================================
-November 2007
-
-== About This Release
-[NOTE]
-This is a development release of a WinMerge. This is *not* a stable release.
-In general, beta releases are not meant for production use. Beta releases
-should be usable in general, but they can contain bugs and unfinished
-features.
-
-This beta release is the last beta release before next 2.8 stable release.
-Between this release and 2.8 stable release there will be only smaller
-improvements and hopefully lots of bug fixes.
-
-Compared to 2.6.x releases there are many improvements done for usability
-of WinMerge. One huge improvement is the new localization system, which
-allows a lot easier translation of WinMerge. Then there are many improved
-dialogs and other features.
-
-Please submit bug reports to our
-https://sourceforge.net/tracker/?group_id=13216&atid=113216[bug-tracker].
-
-== What Is New in 2.7.6?
-
-For a complete changelog, see the ChangeLog.txt in Docs folder in WinMerge
-program folder.
-
-=== New Localization System
-The most important change in this release is the new localization system. The
-new system is based on widely used PO files. PO files are text files that have
-both original (English) text and translated text together. As PO files are
-text files they are easy to edit. Also there is no anymore any kind of
-compiling needed for updating the files. So one can just edit the file and
-re-start WinMerge to test changes done.
-
-See WinMerge's development wiki for more information about translations:
-http://winmerge.org/Wiki/Translations[]
-
-In short: PO files have replaced LANG files in Languages-subfolder.
-
-=== Translations
-Several translations were again updated. We expect things to improve with
-translation statuses, as new system is so much easier to use.
-
-New Croatian and Portuguese translations were added.
-
-=== Other Changes
-* HTML reports from file compare
-* Improved printing
-* New dialog for selecting folder compare columns
-* New icon for Shell Integration
-
-=== Important Bugs Fixed
-* Rename in folder compare misbehaved when renaming item existing only in other
-side.
-* Do not merge ignored differences when multiple differences are selected
-* VCS system integration tried to check out wrong file - this caused many kinds
-of side-effects.
-* Backup file was created from wrong file in folder compare operations
-
-== What Is New in 2.7.4?
-* New confirmation dialog for copying items in folder compare
-* Improved line filter -dialog
-* Printing improvements
-* Allow user to select syntax highlighting to use for file
-* Tabbed multi-window interface
-* Alternative big toolbar
-* Recent project files in File-menu
-
-=== Important Bugs Fixed
-* Crash when comparing empty folders
-* Pressing ESC-key when renaming file caused a crash
-
-== What Is New in 2.7.2?
-* New XML (expat+scew) and regular expression (PCRE) libraries used
-* Try to match files inside differences
-* Optimized folder compare
-* New options for creating backup files
-
-=== Important Bugs Fixed
-* Crash when file modification time was missing
-* Dialogs could be hidden behind other windows
-* Many word-wrap related fixes
