@@ -4,6 +4,7 @@ to Subversion revision numbers (rXXXXX).
 
 WinMerge 2.7.7.1
   Installer: Link to translated ReadMe in Start menu, if file exists (#1805818)
+  Add HTML-formatted release notes (#1851308)
   Bugfix: VS2008 and VS2005 compile problems (#1847265)
   Translation updates:
   - Spanish (#1655577)
